# libwmgr

./: Cargo.toml  README.md
examples/: cli.rs
src/: actions.rs  backend.rs  commands.rs  error.rs  lib.rs  main.rs
src/backend/: mod.rs  private.rs
