[package]
name = "wmgr"
version = "0.1.0"
edition = "2021"

[dependencies]
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-core-foundation =  {version = "0.3.1", features = ["CFString", "CFCGTypes"] }
objc2-application-services = { version = "0.3.1", features = ["HIServices"] }
objc2-core-graphics = "=0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_plain = "1.0.2"
