[package]
name = "libwmgr"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]

[[example]]
name = "cli"
required-features = ["serde"]

[dependencies]
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-core-foundation =  {version = "0.3.1", features = ["CFString", "CFCGTypes", "CFArray"] }
objc2-application-services = { version = "0.3.1", features = ["HIServices"] }
objc2-core-graphics = { version = "=0.3.1", features = ["CGEvent"] }
serde = { version = "1.0.219", features = ["derive"], optional = true }
bitflags = "2.9.3"

[dev-dependencies]
serde_plain = "1.0.2"
